--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,10 @@
-== HomeWork
+= HomeWork
 
 A test application which manage hosts, rooms and bookings.
 
 == Comments
 
-==========================
-
-===
-Gemfile:
+===Gemfile:
 - haml support added
 - puma support added
 - debugger support added
@@ -19,12 +16,12 @@ GitIgnore update.
 
 Sass as default template. (config/application.rb -> config.sass.preferred_syntax = :sass)
 
-===
-Model branch
-- rails g annotate_models:install
-- rails g model host name:string address:text
-- rails g model room host_id:integer capacity:integer
-- rails g model booking room_id:integer start_date:date end_date:date number_of_guests:integer
+===Model branch
+
+  rails g annotate_models:install
+  rails g model host name:string address:text
+  rails g model room host_id:integer capacity:integer
+  rails g model booking room_id:integer start_date:date end_date:date number_of_guests:integer
 
 Indexes: host.name, room.host_id, booking.room_id, booking.start_date, booking.end_date
 
@@ -34,8 +31,7 @@ room.id -> booking.room_id (1:N)
 
 Default scope settings: order
 
-===
-Rake_csv_import branch
+===Rake_csv_import branch
 
 - Copy csv files in db folder, add it to .gitignore.
 - Rake task in /lib/tasks/import.rake
@@ -43,16 +39,17 @@ Rake_csv_import branch
 - Run this import process only once in an environment.
 Examples:
 Import data in development environment:
-(({rake import RAILS_ENV=development}))
+
+  rake import RAILS_ENV=development
+
 Import data in production environment:
-(({rake import RAILS_ENV=production}))
+
+  rake import RAILS_ENV=production
 
 
-===
-TODO
+==TODO
 - Importing csv files with rake
 - Creating controllers and views for search
 - Paginate results
 - Polishing documentation
 - Further tweaking
-
